# sandbox-toy-semantic-search

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  example.env  pyproject.toml
embed/: __init__.py  cli.py  client.py
embed/localtxt/: client.py
scripts/: ask.sh  mappings.vimrc
server/: app.py
server/search/: cli.py  client.py
tests/: test_version.py
utils/: query_server.py
